# todo

./: .renovaterc.json5  404.html  README.md  index.html  objects.inv
.github/workflows/: go.yml  python_linting.yml  python_tests.yml
about/: index.html
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
todo-go/: .gitignore  README.md  go.mod  go.sum  main.go
todo-go/cmd/: add.go  done.go  init.go  list.go  remove.go  root.go
todo-go/cmd/todo/: main.go
todo-go/database/: database.go  database_test.go
todo-go/todo/: database.go  database_test.go  sorting.go  sorting_test.go  todo.go  todo_test.go
todo-python/: .pre-commit-config.yaml  CITATION.cff  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
todo-python/.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
todo-python/.github/workflows/: linting.yml  tests.yml
todo-python/docs/: about.md  index.md  reference.md
todo-python/src/todo/: __init__.py  __main__.py  cli.py  config.py  database.py  todo.py
todo-python/tests/: test_config.py  test_todo.py  test_todo.py.py
tutorials/: index.html
