[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{ email = "milan.malfait94@gmail.com", name = "Milan Malfait" }]
classifiers = [
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = ["configparser==7.1.0", "pathlib==1.0.1", "typer==0.19.2"]
description = "A Todo list manager written in Python"
dynamic = ["version"]
keywords = []
name = "todo-python"
optional-dependencies = { dev = [
  "build",
  "mkdocs",
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
  "tox>=4",
  "twine",
] }
readme = "README.md"
requires-python = ">=3.12"
license.file = "LICENSE.md"
urls.homepage = "https://github.com/milanmlft/todo"

[tool.coverage]
report = { skip_covered = true, sort = "cover" }
run = { branch = true, parallel = true, source = ["todo"] }
paths.source = ["src", ".tox*/*/lib/python*/site-packages"]

[tool.mypy]
explicit_package_bases = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
addopts = """
    --color=yes
    --import-mode=importlib
    --verbose
"""
testpaths = ["tests"]

[tool.ruff]
line-length = 100
fix = true
force-exclude = true
ignore = [
  "COM812", # trailing commas (ruff-format recommended)
  "D203",   # no-blank-line-before-class
  "D212",   # multi-line-summary-first-line
  "D407",   # removed dashes lines under sections
  "D417",   # argument description in docstring (unreliable)
  "ISC001", # simplify implicit str concatenation (ruff-format recommended)
]
per-file-ignores = { "tests*" = ["INP001", "S101", "SLF001", "PLR2004"] }
select = ["ALL"]
target-version = "py312"
isort.known-first-party = ["todo_python"]
mccabe.max-complexity = 18
pep8-naming.classmethod-decorators = ["classmethod"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/todo/_version.py"

[tool.tox]
legacy_tox_ini = """
    [gh-actions]
    python =
        3.12: py312

    [testenv]
    commands =
        pytest --cov --cov-report=xml
    deps =
        pytest
        pytest-cov

    [tox]
    env_list =
        py312
"""
